crates/knok/tests/ui/permute_dims_duplicate_axis.stderr
error: permute_dims axes must be a permutation of 0..3, got [0, 0, 2]
 --> tests/ui/permute_dims_duplicate_axis.rs:3:1
  |
3 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/permute_dims_duplicate_axis.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
